--- a/index.html
+++ b/index.html
@@ -17,42 +17,76 @@
 
     <div class="header">
         <div class="__container">
-            <div class="header__inner">
-                <div class="header__left">
-                    <a class="header__home" href="#">
-                        <img class="header__logo" src="./img/header-logo.png" alt="">
-                    </a>
-                </div>
-                <div class="header__right">
-                    <div class="header__menu-wrapper">
-                        <div class="header__mobile-menu"></div>
-                        <ul class="header__menu">
-                            <li class="header__menu-item">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">Project</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">Services</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">About</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">Blog</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">Shop</a>
-                            </li>
-                            <li class="header__menu-item">
-                                <a href="#">Contact</a>
-                            </li>
-                        </ul>
+            <div class="header__inner-wrapper">
+                <div class="header__inner">
+                    <div class="header__left">
+                        <a class="header__home" href="#">
+                            <img class="header__logo" src="./img/header-logo.png" alt="">
+                        </a>
                     </div>
-                    <a class="header__signup-btn" href="#">
-                        Sign Up
-                    </a>
+                    <div class="header__right">
+                        <div class="header__menu-wrapper">
+                            <ul class="header__menu">
+                                <li class="header__menu-item">
+                                    <a href="#">Home</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">Project</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">Services</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">About</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">Blog</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">Shop</a>
+                                </li>
+                                <li class="header__menu-item">
+                                    <a href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="header__signup-btn" href="#">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
+                <div class="header__mobile-menu-wrapper">
+                    <div class="header__mobile-menu">
+                        <div class="header__mobile-menu-inner"></div>
+                    </div>
+                </div>
+                <div class="header__mobile-menu-list-wrapper">
+                    <ul class="header__mobile-menu-list">
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Project</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Services</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Blog</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Shop</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="header__mobile-menu-list-item">
+                            <a href="#">Sign Up</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
